# MeetingLens

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.txt  meetinglens.ps1  pyproject.toml  requirements.txt
.specify/: feature.json
docs/: index.html  message-for-charlie.md  whats-new-for-charlie.md
scripts/: local-release.ps1
specs/001-meeting-capture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-meeting-capture/checklists/: requirements.md
specs/001-meeting-capture/contracts/: config-schema.md  hotkey-actions.md  prompt-template.md  spoken-messages.md
src/meetinglens/: __init__.py  __main__.py  app.py  config.py  handoff.py  messages.py  notes.py  prompt.py  session.py
src/meetinglens/adapters/: __init__.py  capture.py  clipboard.py  hotkeys.py  launcher.py  scheduler.py  speech.py  tray.py
tests/integration/: test_adapters.py  test_capture.py  test_handoff.py  test_hotkey_reliability.py  test_latency.py  test_notes.py  test_speech.py  test_status_config.py  test_tray.py
tests/unit/: test___init__.py  test___main__.py  test_app.py  test_clipboard.py  test_config.py  test_config_defaults.py  test_handoff.py  test_hotkeys.py  test_launcher.py  test_messages.py  test_notes.py  test_prompt.py  test_scheduler.py  test_session.py  test_status.py
